<resources>
    <string name="app_name">Login screen</string>
    <string name="button_text">Create an account</string>
    <string name="welcome_message">GreenFlag customer can \n create an account to access</string>
    <string name="email_hint">example@mail.com</string>
    <string name="criteria">Your password should have a minimum of 8 character and contain at least one number, one uppercase and lower case letter. You can use special characters.</string>
    <string name="button_next">Next</string>
    <string name="repeat_password">Repeat password</string>
    <string name="hint_password">See criteria below</string>
    <string name="create_password">Create a password</string>
    <string name="logoDescription">Company\'s logo</string>
    <string name="first_benefit">Car health updates</string>
    <string name="second_benefit">Request a rescue online</string>
    <string name="third_benefit">Policy information</string>
    <string name="email_address_tittle">Email address</string>
    <string name="hint_repeated_password">Enter password again</string>
    <string name="title_activity_welcome">Welcome</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_to_the_app">Welcome to the app</string>
</resources>