<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/logoDescription"
        app:srcCompat="@drawable/logo_green_flag" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            style="@style/Theme.LoginScreen.EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:text="@string/first_benefit"
            android:textColor="@color/white"
            app:drawableStartCompat="@drawable/tick" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:text="@string/second_benefit"
            android:textColor="@color/white"
            app:drawableStartCompat="@drawable/tick" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:text="@string/third_benefit"
            android:textColor="@color/white"
            app:drawableStartCompat="@drawable/tick" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!--I am using appCompatButton because background doesn't work with buttons-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/gradient_button_background"
        android:text="@string/button_text"
        android:textAppearance="@style/TextAppearance.AppCompat" />


</LinearLayout>