<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/black"
    android:padding="20dp"

    tools:context=".MainActivity2">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/email_address_tittle"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/inputEmail"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:autofillHints="emailAddress"
            android:background="@color/white"
            android:drawableStart="@drawable/vector_person"
            android:drawablePadding="22dp"
            android:hint="@string/email_hint"
            android:importantForAutofill="auto"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:background="@drawable/edit_text_border_green"
            tools:drawableEnd="@drawable/tick" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/create_password"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

        <EditText
            android:id="@+id/originalPassword"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:drawableStart="@drawable/vector_lock"
            android:drawablePadding="10dp"
            android:hint="@string/hint_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingEnd="10dp"
            android:textColor="@color/black"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:background="@drawable/edit_text_border_red"
            tools:drawableEnd="@drawable/tick"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/repeat_password"

            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/repeatedPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/originalPassword" />

        <EditText
            android:id="@+id/repeatedPassword"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:drawableStart="@drawable/vector_lock"
            android:drawablePadding="10dp"
            android:hint="@string/hint_repeated_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:background="@drawable/edit_text_border_red"
            tools:drawableEnd="@drawable/tick"
            tools:ignore="RtlSymmetry" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:src="@mipmap/ic_launcher"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repeatedPassword" />

        <TextView
            android:id="@+id/textView5"
            style="@style/Theme.LoginScreen.EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/criteria"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nex_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha="0.3"
            android:background="@drawable/gradient_button_background"
            android:backgroundTintMode="src_over"
            android:enabled="false"
            android:text="@string/button_next"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="28sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>